# FastAPI-HTMX

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  setup.ps1  test.ipynb  user_app.ipynb  users.db
app/: app.py  exception.py  templates.py
app/core/: csrf_settings.py  minio.py  minio_settings.py
app/database/: base.py  db.py  security.py
app/migrations/: env.py
app/migrations/versions/: 68909545693a_init.py  ccc721bd563b_init.py  de35d92e5baa_init.py
app/models/: base.py  groups.py  upload.py  uploads.py  users.py
app/routes/: crud.py  user.py
app/routes/api/: crud.py  role.py
app/routes/view/: errors.py  group.py  http.py  login.py  role.py  upload.py  uploads.py  user.py  users.py  view_crud.py
app/schema/: base_model.py  group.py  pydantic_base.py  uploads.py  users.py
app/static/js/: components.js  upload.js
app/templates/: auth_base.html  base.html  index.html  login.html
app/templates/base/: auth_base.html  base.html
app/templates/pages/: dashboard.html  groups.html  index.html  login.html  main.js  register-hyper.html  register.html  role.html  upload.html  user.html
app/templates/partials/: add_group.html  add_role.html  auth_navigation.html  edit_group.html  edit_role.html
app/templates/partials/group/: add_group.html  add_group_user.html  edit_group.html  group_user_profile.html
app/templates/partials/role/: add_role.html  edit_role.html  role_table.html
app/templates/partials/upload/: files_table.html
app/templates/partials/user/: add_user.html  edit_user.html
app/tests/: test_pydantic_base.py  test_role.py  test_view_crud.py
